# table-serialization-kitchen

./: .buildinfo  .gitignore  README.md  docker-compose.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tableserializer.html  tableserializer.integrations.html  tableserializer.serializer.html  tableserializer.table.html  tableserializer.utils.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  tableserializer.doctree  tableserializer.integrations.doctree  tableserializer.serializer.doctree  tableserializer.table.doctree  tableserializer.utils.doctree
.github/workflows/: documentation.yml  publish.yml
_modules/: index.html
_modules/tableserializer/: kitchen.html  recipe.html
_modules/tableserializer/serializer/: metadata.html  schema.html  serializer.html  table.html
_modules/tableserializer/table/: preprocessor.html  row_sampler.html  table.html
_modules/tableserializer/utils/: exceptions.html  functions.html
_sources/: index.rst.txt  tableserializer.rst.txt  tableserializer.utils.rst.txt
docs/source/: conf.py  modules.rst  tableserializer.integrations.rst  tableserializer.serializer.rst  tableserializer.table.rst
src/table_serialization_kitchen/: __init__.py
src/table_serialization_kitchen/serializer/: __init__.py  metadata.py  schema.py  serializer.py  table.py
src/table_serialization_kitchen/table/: __init__.py  preprocessor.py  row_sampler.py
src/tableserializer/: kitchen.py  recipe.py
src/tte_playground/: config.py  serializer.py
(+10 files in other folders)
